--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,22 @@ repositories {
 dependencies {
     implementation 'org.testng:testng:7.1.0'
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    implementation 'ru.yandex.qatools.ashot:ashot:1.5.4'
 
 
 }
 
 test {
     useTestNG()
+}
+
+task reg(type: Test){
+
+    useTestNG{
+        suites 'src/test/resources/testng.xml'
+    }
+
+    if(project.hasProperty('browser')){
+        systemProperty 'browser', "${browser}"
+    }
 }
