--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,13 @@ test {
 task reg(type: Test){
 
     useTestNG{
-        suites 'src/test/resources/testng.xml'
+        suites 'src/test/resources/listenerng.xml'
     }
 
     if(project.hasProperty('browser')){
         systemProperty 'browser', "${browser}"
+    }
+    if(project.hasProperty('target')){
+        systemProperty 'target', "${target}"
     }
 }
