--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .gradle
-/build/
+#/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -15,4 +15,4 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 *.png
 *.jpg
-*.properties
+#*.properties
